--- a/Mission6_Wirthlin/Views/Home/GetToKnowJoel.cshtml
+++ b/Mission6_Wirthlin/Views/Home/GetToKnowJoel.cshtml
@@ -12,7 +12,8 @@
     Check out <a href="https://baconsale.com/" target="_blank">Baconsale</a> for his film & pop culture podcast.
 </p>
 <p>
+    <!-- Example of an external image linking to Baconsale -->
     <a href="https://baconsale.com/" target="_blank">
-        <img src="https://byu.box.com/s/ie6ibeddqm0f6oudp7bc5dyt87zxi2u4" alt="Baconsale" />
+        <img src="~/images/converted_image (2).jpeg" alt="Baconsale" />
     </a>
 </p>
