--- a/Mission6_Wirthlin/Views/Home/Index.cshtml
+++ b/Mission6_Wirthlin/Views/Home/Index.cshtml
@@ -4,4 +4,6 @@
 }
 
 <h1>The Joel Hilton Film Collection</h1>
+
+<!-- Reference the headshot from wwwroot/images -->
 <img src="~/images/JoelHiltonHeadshot.jpg" alt="Joel Hilton" />
