--- a/Mission6_Wirthlin/Views/Shared/_Layout.cshtml
+++ b/Mission6_Wirthlin/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 <header>
     <nav>
         <ul>
+            <!-- Using Tag Helpers to generate correct links -->
             <li><a asp-controller="Home" asp-action="Index">Home</a></li>
             <li><a asp-controller="Home" asp-action="GetToKnowJoel">Get to Know Joel</a></li>
             <li><a asp-controller="Movies" asp-action="Create">Add Movie</a></li>
