--- a/Mission6_Wirthlin/Views/Movies/Create.cshtml
+++ b/Mission6_Wirthlin/Views/Movies/Create.cshtml
@@ -1,5 +1,6 @@
 @model Mission6_Wirthlin.Models.Movie
 
+
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Add Movie";
@@ -10,51 +11,49 @@
 <form asp-action="Create" method="post">
     <div>
         <label asp-for="Title"></label>
-        <input asp-for="Title" />
-        <span asp-validation-for="Title"></span>
+        <input asp-for="Title" class="form-control" />
+        <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="Category"></label>
-        <input asp-for="Category" />
-        <span asp-validation-for="Category"></span>
+        <input asp-for="Category" class="form-control" />
+        <span asp-validation-for="Category" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="Director"></label>
-        <input asp-for="Director" />
-        <span asp-validation-for="Director"></span>
+        <input asp-for="Director" class="form-control" />
+        <span asp-validation-for="Director" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="Rating"></label>
-        <select asp-for="Rating">
+        <select asp-for="Rating" class="form-control">
             <option value="">-- Select Rating --</option>
             <option>G</option>
             <option>PG</option>
             <option>PG-13</option>
             <option>R</option>
         </select>
-        <span asp-validation-for="Rating"></span>
+        <span asp-validation-for="Rating" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="Edited"></label>
-        <select asp-for="Edited">
+        <select asp-for="Edited" class="form-control">
             <option value="false">No</option>
             <option value="true">Yes</option>
         </select>
-        <span asp-validation-for="Edited"></span>
+        <span asp-validation-for="Edited" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="LentTo"></label>
-        <input asp-for="LentTo" />
-        <span asp-validation-for="LentTo"></span>
+        <input asp-for="LentTo" class="form-control" />
+        <span asp-validation-for="LentTo" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="Notes"></label>
-        <input asp-for="Notes" maxlength="25" />
-        <span asp-validation-for="Notes"></span>
+        <input asp-for="Notes" class="form-control" maxlength="25" />
+        <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
-    <div>
-        <button type="submit">Add Movie</button>
-    </div>
+    <button type="submit" class="btn btn-primary">Add Movie</button>
 </form>
 
 @section Scripts {
